--- a/index.html
+++ b/index.html
@@ -176,7 +176,19 @@
             </div>
         </section>
         <!-- End player info section -->
-      
+        <!-- video -->
+        <section class="video-container">
+            <h2>video </h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/z2bWGwwPG-s"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/KriBQVhsgZk"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section>
+<!-- end video -->
     </main>
     <!-- End Main -->
     <!-- Start footer section -->
